Make integration type lowercase in the build scripts

--- a/release/oec-builder/oec-deb/build
+++ b/release/oec-builder/oec-deb/build
@@ -8,9 +8,11 @@ cp -R $INPUT/. /oec-deb && \
 mkdir -p /oec-deb/home/opsgenie/oec/ && \
 cp -R $OEC_SCRIPTS_REPO/$INTEGRATION/. /oec-deb/home/opsgenie/oec && \
 
+INTEGRATION_PATH=$(echo "$INTEGRATION" | awk '{print tolower($0)}')
+
 ####incoming part#######
 go get -u github.com/alexcesaro/log && \
-cd /oec-deb/home/opsgenie/oec/${INTEGRATION,,} && \
+cd /oec-deb/home/opsgenie/oec/${INTEGRATION_PATH} && \
 GOOS=linux GOARCH=amd64 go build -o send2opsgenie send2opsgenie.go && \
 ########################
 
@@ -19,11 +21,11 @@ sed -i "s|<path_of_output_file_of_script>|/home/opsgenie/oec/output/output.txt|"
 sed -i "s/<local | git>/local/g" /oec-deb/home/opsgenie/oec/conf/config.json
 
 sed -i "s/%VERSION%/$OEC_VERSION/g" /oec-deb/DEBIAN/control && \
-sed -i "s/%INTEGRATION%/${INTEGRATION,,}/g" /oec-deb/DEBIAN/control && \
+sed -i "s/%INTEGRATION%/${INTEGRATION_PATH}/g" /oec-deb/DEBIAN/control && \
 
 cd ~ && \
-mkdir -p $OUTPUT/oec-packages-$OEC_VERSION/${INTEGRATION,,} && \
+mkdir -p $OUTPUT/oec-packages-$OEC_VERSION/${INTEGRATION_PATH} && \
 
 mkdir /deb-package && \
 dpkg-deb -b /oec-deb /deb-package && \
-cp -R /deb-package/${INTEGRATION,,}* $OUTPUT/oec-packages-$OEC_VERSION/${INTEGRATION,,}/
+cp -R /deb-package/${INTEGRATION_PATH}* $OUTPUT/oec-packages-$OEC_VERSION/${INTEGRATION_PATH}/
