--- a/Jira/jiraConfig.json
+++ b/Jira/jiraConfig.json
@@ -2,9 +2,7 @@
   "apiKey": "<API_KEY>",
   "baseUrl": "https://api.opsgenie.com",
   "logLevel": "DEBUG",
-  "globalArgs": [
-    "<list_of_args_you_want_to_pass_to_the_scripts>"
-  ],
+  "globalArgs": [],
   "globalFlags": {
     "url": "<url>",
     "username": "<username>",
@@ -16,55 +14,37 @@
     "createIssue": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "resolveIssue": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "inProgressIssue": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "closeIssue": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "issueDone": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "addCommentToIssue": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     }
   },
