--- a/LibreNMS/libreNMSConfig.json
+++ b/LibreNMS/libreNMSConfig.json
@@ -2,9 +2,7 @@
   "apiKey": "<API_KEY>",
   "baseUrl": "https://api.opsgenie.com",
   "logLevel": "DEBUG",
-  "globalArgs": [
-    "<list_of_args_you_want_to_pass_to_the_scripts>"
-  ],
+  "globalArgs": [],
   "globalFlags": {
     "url": "<url>",
     "apiToken": "<api_token>"
@@ -13,19 +11,13 @@
     "ackAlert": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "unmuteAlert": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     }
   },
