--- a/Solarwinds/solarwindsConfig.json
+++ b/Solarwinds/solarwindsConfig.json
@@ -2,9 +2,7 @@
   "apiKey": "<API_KEY>",
   "baseUrl": "https://api.opsgenie.com",
   "logLevel": "DEBUG",
-  "globalArgs": [
-    "<list_of_args_you_want_to_pass_to_the_scripts>"
-  ],
+  "globalArgs": [],
   "globalFlags": {
     "url": "https://<your_solarwinds_server_IP_or_FQDN>:17778",
     "login": "<name_of_solarwinds_user_that_can_acknowledge_alerts>",
@@ -14,28 +12,19 @@
     "Acknowledge": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "AddNote": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "Close": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [
-        "e1=v1",
-        "e2=v2"
-      ],
+      "environmentVariables": [],
       "stdout": "<path_of_output_file_of_script>"
     }
   },
