--- a/release/oec-builder/oec-rpm/build
+++ b/release/oec-builder/oec-rpm/build
@@ -9,9 +9,12 @@ cp -R $OEC_SCRIPTS_REPO/$INTEGRATION/. /rpmbuild/oec-scripts && \
 INTEGRATION_PATH=$(echo "$INTEGRATION" | awk '{print tolower($0)}')
 
 #########incoming part##########
-go get -u github.com/alexcesaro/log && \
-cd /rpmbuild/oec-scripts/${INTEGRATION_PATH} && \
-GOOS=linux GOARCH=amd64 go build -o send2opsgenie send2opsgenie.go && \
+INCOMING_PATH=/oec/${INTEGRATION_PATH}
+if [ -d "$INCOMING_PATH" ]; then
+  go get -u github.com/alexcesaro/log && \
+  cd /rpmbuild/oec-scripts/${INTEGRATION_PATH} && \
+  GOOS=linux GOARCH=amd64 go build -o send2opsgenie send2opsgenie.go
+fi
 ################################
 
 sed -i "s|<path_of_script>|$RPM_BUILD_ROOT/home/opsgenie/oec/scripts/actionExecutor.py|" /rpmbuild/oec-scripts/conf/config.json
