--- a/release/oec-builder/oec-rpm/build
+++ b/release/oec-builder/oec-rpm/build
@@ -1,8 +1,10 @@
 #!/bin/bash
 
-#need to get executables from s3 and put under rpmbuild
 mkdir /rpmbuild
-cp $OEC_SCRIPTS_REPO/release/oec-builder/executables/OpsgenieEdgeConnector /rpmbuild
+s3URL=https://og-release-cicd-public-oregon.s3-us-west-2.amazonaws.com/purpose%3Dpublic/project%3Doec-builder/env%3Dprod/branch%3D${BRANCH}/module%3Doec-builder/version%3D${OEC_VERSION}/oec-linux-${OEC_VERSION}.zip
+curl ${s3URL} --output ./oec.zip --silent --show-error --create-dirs
+unzip ./oec.zip -d /rpmbuild
+
 cp -R $INPUT/. /rpmbuild && \
 cp -R $OEC_SCRIPTS_REPO/$INTEGRATION/. /rpmbuild/oec-scripts && \
 
