--- a/release/oec-builder/oec-win32/build
+++ b/release/oec-builder/oec-win32/build
@@ -1,9 +1,9 @@
 #!/bin/bash
 
-#get OpsgenieEdgeConnector32.exe and oecService32.exe from s3
 mkdir /oec
-cp $OEC_SCRIPTS_REPO/release/oec-builder/executables/OpsgenieEdgeConnector32.exe /oec
-cp $OEC_SCRIPTS_REPO/release/oec-builder/executables/oecService32.exe /oec
+s3URL=https://og-release-cicd-public-oregon.s3-us-west-2.amazonaws.com/purpose%3Dpublic/project%3Doec-builder/env%3Dprod/branch%3D${BRANCH}/module%3Doec-builder/version%3D${OEC_VERSION}/oec-win32-${OEC_VERSION}.zip
+curl ${s3URL} --output ./oec.zip --silent --show-error --create-dirs
+unzip ./oec.zip -d /oec
 
 cp -R $INPUT/oecService.json.example /oec && \
 cp -R $OEC_SCRIPTS_REPO/$INTEGRATION/. /oec && \
