--- a/release/oec-builder/oec-deb/build
+++ b/release/oec-builder/oec-deb/build
@@ -12,10 +12,10 @@ cp -R $OEC_SCRIPTS_REPO/$INTEGRATION/. /oec-deb/home/opsgenie/oec && \
 INTEGRATION_PATH=$(echo "$INTEGRATION" | awk '{print tolower($0)}')
 
 ####incoming part#######
-INCOMING_PATH=/oec/${INTEGRATION_PATH}
+INCOMING_PATH=/oec-deb/home/opsgenie/oec/${INTEGRATION_PATH}
 if [ -d "$INCOMING_PATH" ]; then
   go get -u github.com/alexcesaro/log && \
-  cd /oec-deb/home/opsgenie/oec/${INTEGRATION_PATH} && \
+  cd ${INCOMING_PATH} && \
   GOOS=linux GOARCH=amd64 go build -o send2opsgenie send2opsgenie.go
 fi
 ########################
