--- a/release/oec-builder/oec-rpm/build
+++ b/release/oec-builder/oec-rpm/build
@@ -11,10 +11,10 @@ cp -R $OEC_SCRIPTS_REPO/$INTEGRATION/. /rpmbuild/oec-scripts && \
 INTEGRATION_PATH=$(echo "$INTEGRATION" | awk '{print tolower($0)}')
 
 #########incoming part##########
-INCOMING_PATH=/oec/${INTEGRATION_PATH}
+INCOMING_PATH=/rpmbuild/oec-scripts/${INTEGRATION_PATH}
 if [ -d "$INCOMING_PATH" ]; then
   go get -u github.com/alexcesaro/log && \
-  cd /rpmbuild/oec-scripts/${INTEGRATION_PATH} && \
+  cd ${INCOMING_PATH} && \
   GOOS=linux GOARCH=amd64 go build -o send2opsgenie send2opsgenie.go
 fi
 ################################
