--- a/Icinga2/icinga2/opsgenie.conf
+++ b/Icinga2/icinga2/opsgenie.conf
@@ -3,7 +3,7 @@ object NotificationCommand "opsgenie-service-notification" {
 
   vars.hgns = {{ host.groups.join(",") }}
   vars.sgns = {{ service.groups.join(",") }}
-  command = [ "/home/opsgenie/oec/icinga2/icinga2opsgenie" ]
+  command = [ "/home/opsgenie/oec/icinga2/send2opsgenie" ]
   arguments = {
   "-entityType" = "service"
   "-t" = "$notification.type$"
@@ -55,7 +55,7 @@ object NotificationCommand "opsgenie-host-notification" {
   import "plugin-notification-command"
 
   vars.hgns = {{ host.groups.join(",") }}
-  command = [ "/usr/bin/icinga2opsgenie" ]
+  command = [ "/usr/bin/send2opsgenie" ]
   arguments = {
   "-entityType" = "host"
   "-t" = "$notification.type$"
