Changed path of send2opsgenie executable of Icinga

--- a/Icinga2/icinga2/opsgenie.conf
+++ b/Icinga2/icinga2/opsgenie.conf
@@ -55,7 +55,7 @@ object NotificationCommand "opsgenie-host-notification" {
   import "plugin-notification-command"
 
   vars.hgns = {{ host.groups.join(",") }}
-  command = [ "/usr/bin/send2opsgenie" ]
+  command = [ "/home/opsgenie/oec/icinga2/send2opsgenie" ]
   arguments = {
   "-entityType" = "host"
   "-t" = "$notification.type$"
