Update config file of XMPP and Zendesk

--- a/Xmpp/conf/config.json
+++ b/Xmpp/conf/config.json
@@ -4,8 +4,7 @@
   "logLevel": "DEBUG",
   "globalArgs": [],
   "globalFlags": {
-    "hostUrl": "<your_service_name>",
-    "username": "<username>",
+    "jid": "<jid>",
     "password": "<password>",
     "room": "<room_name>"
   },
