--- a/release/oec-builder/oec-win32/build
+++ b/release/oec-builder/oec-win32/build
@@ -9,7 +9,7 @@ cp -R $INPUT/oecService.json.example /oec-win32 && \
 cp -R $OEC_SCRIPTS_REPO/$INTEGRATION/. /oec-win32 && \
 cp $OEC_SCRIPTS_REPO/release/oec-builder/oecScriptsVersion.json /oec-win32 && \
 
-INTEGRATION_VERSION=($(jq -r --arg v "$INTEGRATION" '.[$v]' /oec-win32/oecScriptsVersion.json))
+INTEGRATION_VERSION=$(jq -r --arg v "$INTEGRATION" '.[$v]' /oec-win32/oecScriptsVersion.json)
 rm /oec-win32/oecScriptsVersion.json && \
 
 INTEGRATION_NAME=$(echo "$INTEGRATION" | awk '{print tolower($0)}')
