Add network-online.target to rpm services for avoiding network failures on reboot

--- a/release/oec-builder/oec-rpm/oec.service
+++ b/release/oec-builder/oec-rpm/oec.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Opsgenie Edge Connector (OEC)
-After=network.target
+Wants=network-online.target
+After=network.target network-online.target
 
 [Service]
 Group=opsgenie
