updating splunk oec scripts to read from config

--- a/Splunk/conf/config.json
+++ b/Splunk/conf/config.json
@@ -3,7 +3,10 @@
     "baseUrl" : "https://api.opsgenie.com",
     "logLevel" : "DEBUG",
     "globalArgs" : [],
-    "globalFlags" : {},
+    "globalFlags" : {
+        "url": "<url>",
+        "token": "<token>"
+    },
     "globalEnv" : [],
     "actionMappings" : {
         "createEvent" : {
