--- a/DynatraceAppMon/conf/config.json
+++ b/DynatraceAppMon/conf/config.json
@@ -13,13 +13,13 @@
     "confirmIncident": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [],
+      "env": [],
       "stdout": "<path_of_output_file_of_script>"
     },
     "inProgressIncident": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [],
+      "env": [],
       "stdout": "<path_of_output_file_of_script>"
     }
   },
