--- a/PRTG/conf/config.json
+++ b/PRTG/conf/config.json
@@ -12,7 +12,7 @@
     "acknowledgeSensor": {
       "filepath": "<path_of_script>",
       "sourceType": "<local | git>",
-      "environmentVariables": [],
+      "env": [],
       "stdout": "<path_of_output_file_of_script>"
     }
   },
