--- a/Icinga2/conf/config.json
+++ b/Icinga2/conf/config.json
@@ -7,7 +7,8 @@
     "graphite_url": "http://localhost:5003",
     "api_url": "https://localhost:5665",
     "user": "icingaadmin",
-    "password": "icingaadmin"
+    "password": "icingaadmin",
+    "insecure": "false"
   },
   "actionMappings": {
     "Create": {
